# cosmic-applet-world-clock

./: Cargo.toml  Readme.md  justfile
cosmic-applet-time/: Cargo.toml
cosmic-applet-time/src/: window.rs
i18n/en/: cosmic_applet_world_clock.ftl
resources/: app.desktop  app.metainfo.xml
src/: lib.rs  main.rs  window.rs  world_clocks.rs
