[package]
name = "cosmic-applet-world-clock"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "World clock panel applet for the COSMIC desktop"
repository = "https://github.com/Drodofsky/cosmic-applet-world-clock"

[dependencies]
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "dbus-config",
    "tokio",
    "wayland",
    "winit",
] }
rust-embed = "8.11.0"
tracing = "0.1"
tokio = { version = "1.49.0", features = ["full"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
logind-zbus = "4"
jiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3"
tracing-log = "0.2"

[profile.release]
opt-level = 1

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }